--- a/package.json
+++ b/package.json
@@ -2,23 +2,30 @@
 	"//1": "describes your app and its dependencies",
 	"//2": "https://docs.npmjs.com/files/package.json",
 	"//3": "updating this file will download and update your packages",
-	"name": "my-hyperdev-app",
+	"name": "anonymous-message-board",
 	"version": "0.0.1",
-	"description": "What am I about?",
+	"description": "Anonymous Message Board - JohnMacIntire.com",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js",
+		"sass": "sass --watch sass:public",
+		"reload-browser": "browser-sync start --proxy localhost:3000 --files 'public/*.css', views/*.html, routes/*.js, controllers/*.js, models/*.js",
+		"typescript": "tsc --watch"
 	},
 	"dependencies": {
-		"express": "^4.14.0",
-		"cors": "^2.8.1",
 		"body-parser": "^1.15.2",
 		"chai": "^3.5.0",
-		"mongodb": "^2.2.16",
 		"chai-http": "^3.0.0",
-		"mocha": "^3.2.0",
-		"zombie": "^5.0.5",
-		"helmet": "^3.1.0"
+		"cors": "^2.8.1",
+		"dotenv": "^8.2.0",
+		"express": "^4.14.0",
+		"helmet": "^3.1.0",
+		"mocha": "^3.5.3",
+		"mongodb": "^2.2.36",
+		"mongoose": "^5.7.7",
+		"node-fetch": "^2.6.0",
+		"node-sass": "^4.13.0",
+		"zombie": "^5.0.5"
 	},
 	"engines": {
 		"node": "4.4.3"
