--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
 		"start": "nodemon public/index.js",
 		"sass": "sass --watch src/sass:public/style",
 		"reload-browser": "browser-sync start --proxy localhost:3000 --files 'tests/*, public/**/*, src/**/*",
-		"typescript": "tsc -watch",
+		"typescript-watch": "tsc -watch",
+		"check-types": "tsc",
 		"babel": "babel ./src --out-dir public --extensions '.ts,.tsx'",
 		"babel-watch": "babel --watch src --out-dir public --extensions .ts,.tsx --presets @babel/typescript --verbose"
 	},
 	"dependencies": {
+		"@types/chai": "^4.2.4",
+		"@types/cors": "^2.8.6",
+		"@types/express": "^4.17.2",
 		"body-parser": "^1.15.2",
 		"chai": "^3.5.0",
 		"chai-http": "^3.0.0",
@@ -52,6 +56,7 @@
 		"@babel/preset-typescript": "^7.6.0",
 		"@babel/register": "^7.6.2",
 		"@babel/runtime": "^7.6.3",
+		"@types/helmet": "0.0.45",
 		"@types/mongodb": "^3.3.7",
 		"@types/mongoose": "^5.5.26",
 		"babel-watch": "^7.0.0"
