--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceFolder}\\public\\index.js",
-            "preLaunchTask": "tsc: build - tsconfig.json",
+            "preLaunchTask": "npm: check-types",
             "outFiles": [
                 "${workspaceFolder}/public/**/*.js"
             ]
