--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
 	"scripts": {
 		"start": "nodemon public/index.js",
 		"sass": "sass --watch src/sass:public/style",
-		"reload-browser": "browser-sync start --proxy localhost:3000 --files 'tests/*, public/**/*, src/**/*",
+		"reload-browser": "browser-sync start --proxy localhost:3000 --files 'public/**/*, src/**/*",
 		"typescript-watch": "tsc -watch",
 		"check-types": "tsc",
-		"babel": "babel ./src --out-dir public --extensions '.ts,.tsx'",
-		"babel-watch": "babel --watch src --out-dir public --extensions .ts,.tsx --presets @babel/typescript --verbose"
+		"babel": "babel src --out-dir public --extensions .ts,.tsx --presets @babel/typescript --verbose --allowSyntheticDefaultImports",
+		"babel-watch": "babel --watch src --out-dir public --extensions .ts,.tsx --presets @babel/typescript --verbose",
+		"prelaunch": "npm run babel && npm run check-types"
 	},
 	"dependencies": {
 		"@types/chai": "^4.2.4",
 		"@types/cors": "^2.8.6",
 		"@types/express": "^4.17.2",
+		"@types/mocha": "^5.2.7",
 		"body-parser": "^1.15.2",
-		"chai": "^3.5.0",
-		"chai-http": "^3.0.0",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
 		"mocha": "^3.5.3",
 		"mongodb": "^2.2.36",
-		"mongoose": "^5.7.7",
+		"mongoose": "^5.7.10",
 		"node-fetch": "^2.6.0",
 		"node-sass": "^4.13.0",
 		"zombie": "^5.0.5"
@@ -38,7 +40,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
+		"url": "https://github.com/jrwmacintire/anonymous-message-board.git"
 	},
 	"keywords": [
 		"node",
@@ -47,18 +49,18 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/cli": "^7.6.4",
-		"@babel/core": "^7.6.4",
-		"@babel/node": "^7.6.3",
-		"@babel/plugin-proposal-class-properties": "^7.5.5",
+		"@babel/cli": "^7.7.0",
+		"@babel/core": "^7.7.2",
+		"@babel/node": "^7.7.0",
+		"@babel/plugin-proposal-class-properties": "^7.7.0",
 		"@babel/plugin-transform-runtime": "^7.6.2",
-		"@babel/preset-env": "^7.6.3",
-		"@babel/preset-typescript": "^7.6.0",
-		"@babel/register": "^7.6.2",
-		"@babel/runtime": "^7.6.3",
+		"@babel/preset-env": "^7.7.1",
+		"@babel/preset-typescript": "^7.7.2",
+		"@babel/register": "^7.7.0",
+		"@babel/runtime": "^7.7.2",
 		"@types/helmet": "0.0.45",
-		"@types/mongodb": "^3.3.7",
-		"@types/mongoose": "^5.5.26",
+		"@types/mongodb": "^3.3.10",
+		"@types/mongoose": "^5.5.30",
 		"babel-watch": "^7.0.0"
 	}
 }
