--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}\\public\\index.js",
-            "preLaunchTask": "npm: prelaunch",
-            "outFiles": [
-                "${workspaceFolder}/public/**/*.js"
-            ]
+            "name": "Launch Debugger",
+            "program": "${workspaceFolder}\\src\\index.ts",
+            "preLaunchTask": "compile-babel",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "outFiles": ["${workspaceFolder}\\public\\*.js"],
+            "sourceMaps": true
         }
-    ]
+    ],
+    "compounds": []
 }
