--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,21 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "module": "es6",
-        "moduleResolution": "node",
-        "allowJs": true,
-        "noEmit": true,
-        "isolatedModules": true,
-        "esModuleInterop": true,
-        "noImplicitReturns": true,
-        "lib": [
-            "dom",
-            "es6"
-        ],
-        "outDir": "public",
-        "sourceMap": true
-    },
-    "include": [
-        "src",
-    ]
+  "compilerOptions": {
+      "target": "es5",
+      "module": "es6",
+      "moduleResolution": "node",
+      "allowJs": true,
+      "noEmit": true,
+      "strict": true,
+      "isolatedModules": true,
+      "esModuleInterop": true,
+      "sourceMap": true,
+      "outDir": "public"
+  },
+  "include": [
+      "src"
+  ],
+  "exclude": [
+      "node_modules",
+      ".vscode"
+  ]
 }
