--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,21 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "watch:babel",
+            "type": "shell",
+            "command": "npm run babel-watch",
+            "problemMatcher": [],
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": true
+            }
+        },
+        {
             "label": "build:babel",
             "command": "npm run babel",
             "type": "shell",
