--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -52,7 +52,7 @@
             "presentation": {
                 "echo": true,
                 "reveal": "always",
-                "focus": false,
+                "focus": true,
                 "panel": "shared",
                 "showReuseMessage": true,
                 "clear": true
